remove scim immutable fields from the api
